--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
       <div class="page-title">
         <h1> Scaling Up </h1>
         <p>
-          THE 11th MIT BITCOIN EXPO <br>
+          THE ANNUAL MIT BITCOIN EXPO <br>
           APRIL 20 - 21, 2024
         </p>
       </div><!-- /.page-title -->
@@ -135,13 +135,13 @@
 
   <section class="about-txt">
     <div class="container">
-      <p>Welcome to the 11th Annual MIT Bitcoin Expo, a hallmark event celebrating over a decade as the foremost collegiate conference dedicated to blockchain technology. This year, we proudly present our theme: "Scaling Up: Bitcoin’s Lead in a World Dominated by Regulation, Globalization, and Big Tech".</p>
+      <p>Welcome to the Annual MIT Bitcoin Expo, a hallmark event celebrating over a decade as the foremost collegiate conference dedicated to blockchain technology. This year, we proudly present our theme: "Scaling Up: Bitcoin’s Lead in a World Dominated by Regulation, Globalization, and Big Tech".</p>
       
       <p>In an era where the financial landscape is increasingly influenced by regulatory frameworks, global economic shifts, and the pervasive reach of major technology corporations, Bitcoin stands at a pivotal juncture. Our conference delves deep into how Bitcoin continues to evolve and assert its relevance and potential in this complex environment.</p>
 
       <p>Key topics on our agenda include the recent milestone of Bitcoin Exchange-Traded Fund (ETF) approvals, offering a new level of accessibility and legitimacy to Bitcoin investments. We'll explore how regulatory clarity is shaping the future of cryptocurrencies and their integration into mainstream finance. Our technical sessions are set to highlight groundbreaking advancements in Bitcoin’s infrastructure. Special focus will be given to the Taproot upgrade and Convenants, enhancing Bitcoin's usability and scalability, and Layer 2 solutions, crucial for scaling Bitcoin's transaction capacity to meet global demand. Moreover, this year's expo will not shy away from the cutting-edge. We're excited to showcase innovations in zero-knowledge (zk) proofs, a revolutionary technology enabling enhanced privacy and security in blockchain transactions. These discussions aim to provide a comprehensive understanding of the current and potential applications of zk in the blockchain space. In keeping with our tradition of fostering a holistic view of the blockchain ecosystem, we'll also explore intersections with other burgeoning technologies like AI and Web3, underscoring Bitcoin's significant role in our rapidly evolving digital era.</p>
 
-      <p>The MIT Bitcoin Expo is more than a conference; it's a community and a platform for exchange, learning, and innovation. Whether you're a seasoned expert in the field or newly intrigued by the potential of blockchain, we invite you to join us in this enlightening journey. Mark your calendars for an enlightening weekend of discussion, discovery, and networking. We can’t wait to welcome you to the 11th Annual MIT Bitcoin Expo, where we unite to celebrate and scrutinize the ascent of Bitcoin in a world brimming with regulatory, global, and technological challenges and opportunities.</p>
+      <p>The MIT Bitcoin Expo is more than a conference; it's a community and a platform for exchange, learning, and innovation. Whether you're a seasoned expert in the field or newly intrigued by the potential of blockchain, we invite you to join us in this enlightening journey. Mark your calendars for an enlightening weekend of discussion, discovery, and networking. We can’t wait to welcome you to the Annual MIT Bitcoin Expo, where we unite to celebrate and scrutinize the ascent of Bitcoin in a world brimming with regulatory, global, and technological challenges and opportunities.</p>
 
       <p>See you there!</p>
 
