--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </p>
       </div><!-- /.sec-t -->
       <p>
-        Welcome to the 11th Annual MIT Bitcoin Expo, celebrating our decade-long tradition as the longest-running
+        Welcome to the Annual MIT Bitcoin Expo, celebrating our decade-long tradition as the longest-running
         collegiate conference focused on blockchain. This year, we spotlight Bitcoin's evolution and potential amidst
         globalization, regulation, and big tech. Attendees will delve into key topics like ETF approvals, regulatory
         clarity, and consumer applications, essential for Bitcoin's mainstream adoption. Our technical sessions will
@@ -200,8 +200,6 @@
         <h2> Speakers </h2>
       </div><!-- /.sec-t -->
 
-      <div class="row g-lg-5 gy-4 justify-content-center row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1">
-
         <div class="col-10">
           <div class="team-single">
             <img src="assets/img/speakers/leah-wald.png" class="w-100" alt="team-img">
@@ -209,6 +207,30 @@
               <h5> Leah Wald </h5>
               <p>
                 CEO, Valkyrie Investments
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/matt.jpg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Matthew Horne </h5>
+              <p>
+                Head of Business Development Fidelity Digital Asset Management
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/mike.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Mike Schmidt </h5>
+              <p>
+                Executive Director, Brink
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -229,11 +251,11 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/Neha+pic.jpg" class="w-100" alt="team-img">
+            <img src="assets/img/speakers/john.jpeg" class="w-100" alt="team-img">
             <div class="team-info">
-              <h5> Neha Narula </h5>
+              <h5> John D'Agostino </h5>
               <p>
-                Director, MIT Digital Currency Initiative
+                Lead of Institutional Strategy, Coinbase
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -265,11 +287,11 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/nic.png" class="w-100" alt="team-img">
+            <img src="assets/img/speakers/Neha+pic.jpg" class="w-100" alt="team-img">
             <div class="team-info">
-              <h5> Nic Carter </h5>
+              <h5> Neha Narula </h5>
               <p>
-                General Partner, Castle Island Ventures
+                Director, MIT Digital Currency Initiative
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -277,11 +299,11 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/john.jpeg" class="w-100" alt="team-img">
+            <img src="assets/img/speakers/nic.png" class="w-100" alt="team-img">
             <div class="team-info">
-              <h5> John D'Agostino </h5>
+              <h5> Nic Carter </h5>
               <p>
-                Lead of Institutional Strategy, Coinbase
+                General Partner, Castle Island Ventures
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -306,30 +328,6 @@
               <h5> Steven Roose </h5>
               <p>
                 Developer, Ark
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
-
-        <div class="col-10">
-          <div class="team-single">
-            <img src="assets/img/speakers/bob.jpeg" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5> Robert Bench </h5>
-              <p>
-                 Senior Advisor, MIT Digital Currency Initiative
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
-
-        <div class="col-10">
-          <div class="team-single">
-            <img src="assets/img/speakers/ishaana.png" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5> Ishaana Misra </h5>
-              <p>
-                High School Student & Bitcoin Core Developer, Stuyvesant High School
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
