--- a/speakers.html
+++ b/speakers.html
@@ -135,6 +135,43 @@
 
       <div class="row g-lg-5 gy-4 justify-content-center row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1">
 
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/peter2.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Peter Nobel </h5>
+              <p>
+                Nobel Family
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/heath1.jpg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Heath Tarbet </h5>
+              <p>
+                CLO, Circle
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/jai1.jpg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Jai Massari </h5>
+              <p>
+                CLO, Lightspark
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
         <div class="col-10">
           <div class="team-single">
             <img src="assets/img/speakers/leah-wald.png" class="w-100" alt="team-img">
@@ -414,6 +451,117 @@
           </div><!-- /.team-single -->
         </div><!-- /.col-lg -->
 
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/jameson1.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Jameson Lopp </h5>
+              <p>
+                Co-Founder & CSO, Casa
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/jesse1.jpg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Jesse Myers </h5>
+              <p>
+                COO, Onramp Bitcoin
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/jaimie1.jpg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Jaime Leverton </h5>
+              <p>
+                CEO, Jaime Leverton Ventures and Advisory Inc.
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/matt1.jpg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Matt Williams </h5>
+              <p>
+                Head of Derivatives, Luxor Technology
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/edward1.jpg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Edward Woodford </h5>
+              <p>
+                Founder and CEO, Zero Hash
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/alpen1.jpg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Liam Eagen </h5>
+              <p>
+                Founding Cryptographer, Alpen<br>
+                Researcher, Zeta Function Technologies
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/jhb.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> JHB </h5>
+              <p>
+                Protocol Engineer, Lightning Labs
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/bao1.jpg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Claire Bao </h5>
+              <p>
+                Research Assistant, MIT Digital Currency Initiative
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/spot1.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Spot </h5>
+              <p>
+                Boston Dynamics Robot
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+
         <div class="col-10">
           <div class="team-single">
             <img src="assets/img/speakers/satoshi.jpeg" class="w-100" alt="team-img">
@@ -425,8 +573,6 @@
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
         </div><!-- /.col-lg -->
-
-
 
       </div><!-- /.row -->
 
