--- a/index.html
+++ b/index.html
@@ -202,6 +202,45 @@
 
       <div class="row g-lg-5 gy-4 justify-content-center row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1">
         
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/peter2.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Peter Nobel </h5>
+              <p>
+                The Nobel Family, <br>NobelDAO
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/heath1.jpg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Heath Tarbet </h5>
+              <p>
+                CLO and Head of Corporate Affairs, Circle
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/jai1.jpg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Jai Massari </h5>
+              <p>
+                CLO, Lightspark<br>
+                Berkeley Law
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+
         <div class="col-10">
           <div class="team-single">
             <img src="assets/img/speakers/leah-wald.png" class="w-100" alt="team-img">
@@ -311,42 +350,7 @@
           </div><!-- /.team-single -->
         </div><!-- /.col-lg -->
 
-        <div class="col-10">
-          <div class="team-single">
-            <img src="assets/img/speakers/tadge.png" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5> Tadge Dryja </h5>
-              <p>
-                Researcher, Lightspark
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
-
-        <div class="col-10">
-          <div class="team-single">
-            <img src="assets/img/speakers/steven.png" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5> Steven Roose </h5>
-              <p>
-                Developer, Ark
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
-
-        <div class="col-10">
-          <div class="team-single">
-            <img src="assets/img/speakers/jeremy+rubin.jpeg" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5> Jeremy Rubin </h5>
-              <p>
-                Bitcoin Core Developer
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
-
+       
       </div><!-- /.row -->
 
       <div class="sp-btns">
