--- a/speakers.html
+++ b/speakers.html
@@ -142,7 +142,7 @@
             <div class="team-info">
               <h5> Peter Nobel </h5>
               <p>
-                Nobel Family
+                The Nobel Family, <br>NobelDAO
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -154,7 +154,7 @@
             <div class="team-info">
               <h5> Heath Tarbet </h5>
               <p>
-                CLO, Circle
+                CLO and Head of Corporate Affairs, Circle
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -166,7 +166,8 @@
             <div class="team-info">
               <h5> Jai Massari </h5>
               <p>
-                CLO, Lightspark
+                CLO, Lightspark<br>
+                Berkeley Law
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
