--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
 
 
               <li class="nav-item">
-                <a href="https://www.mitbitcoinexpo.org/prior-expos"> prior expos </a>
+                <a href="nobeldao.html"> NobelDAO </a>
               </li>
 
 
