--- a/nobeldao.html
+++ b/nobeldao.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <title> MIT Bitcoin Expo - Schedule </title>
+  <title> NobelDAO - About </title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Favicons -->
@@ -49,7 +49,7 @@
             <ul id="nav" class="navbar-nav">
 
               <li class="nav-item">
-                <a href="about.html"> About </a>
+                <a href="about.html" class="active"> About </a>
               </li>
 
               <li class="nav-item">
@@ -72,7 +72,7 @@
 
 
               <li class="nav-item">
-                <a href="schedule.html" class="active"> Schedule </a>
+                <a href="schedule.html"> Schedule </a>
               </li>
 
 
@@ -92,7 +92,7 @@
               </li>
 
               <li class="nav-item">
-                <a href="https://www.eventbrite.com/e/mit-bitcoin-expo-2024-tickets-808745157537" target="_blank" class="apply-btn">
+                <a href="https://www.eventbrite.com/e/mit-bitcoin-expo-2024-tickets-808745157537?aff=oddtdtcreator" target="_blank" class="apply-btn">
                   <span> Buy Tickets</span>
                   <img src="assets/img/logo/arrow.svg" alt=arrow"">
                 </a>
@@ -123,19 +123,41 @@
   <section class="page-header">
     <div class="container">
       <div class="page-title">
-        <h1> Schedule </h1>
+        <h1> NobelDAO </h1>
+        <p>
+          THE ANNUAL MIT BITCOIN EXPO <br>
+          APRIL 20 - 21, 2024
+        </p>
       </div><!-- /.page-title -->
-
-      <div class="spr-btns mt-lg-5 mt-4">
-       <h5 class="cming">Coming Soon...</h5>
-      </div><!-- /.spr-btns -->
-
     </div><!-- /.container -->
   </section><!-- /.page-header -->
 
-  <section class="speakers">
-   
-  </section><!-- /.speakers -->
+
+  <section class="about-txt">
+    <div class="container">
+      <p>Nobel DAO, where brilliance meets opportunity. Initiated by the Nobel family members, we're a global platform for the brightest minds. Break down barriers with our innovative incentives, tap into a diverse ecosystem of support, and collaborate with visionaries. Membership is your ticket to a world of rewards and possibilities. Join us and redefine the future of innovation.</p>
+      <p>Apply Today!</p>
+
+
+     <div class="pt-lg-5 pt-md-3 pt-3 mb-3">
+      <p>
+        NobelDAO Family 2024
+      </p>
+     </div><!-- /.mt-lg-3 -->
+
+
+     <div class="pt-lg-5 pt-4 text-center">
+      <a class="btn-solid" href="https://www.nobeldao.com/join-us" target="_blank">
+        <span> Join Us </span>
+        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M1.79565 7.94437H14.7587M14.7587 7.94437L8.27711 14.4259M14.7587 7.94437L8.27711 1.46289" stroke="#" stroke-width="1.66667" stroke-linecap="square"></path>
+        </svg>
+      </a>
+     </div><!-- /.pt-5 -->
+
+
+    </div><!-- /.container -->
+  </section><!-- /.about-txt -->
 
 
 
@@ -151,7 +173,7 @@
               </div><!-- /.footer-l -->
               <p>
                 MIT Bitcoin Expo is the longest-running
-                collegiate conference about blockchain.
+                collegiate conference about blockchain.
               </p>
             </div><!-- /.footer-logo -->
 
