--- a/speakers.html
+++ b/speakers.html
@@ -67,7 +67,7 @@
 
 
               <li class="nav-item">
-                <a href="https://www.mitbitcoinexpo.org/prior-expos"> prior expos </a>
+                <a href="nobeldao.html"> NobelDAO </a>
               </li>
 
 
@@ -150,31 +150,6 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/heath1.jpg" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5> Heath Tarbet </h5>
-              <p>
-                CLO and Head of Corporate Affairs, Circle
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
-
-        <div class="col-10">
-          <div class="team-single">
-            <img src="assets/img/speakers/jai1.jpg" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5> Jai Massari </h5>
-              <p>
-                CLO, Lightspark<br>
-                Berkeley Law
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
-
-        <div class="col-10">
-          <div class="team-single">
             <img src="assets/img/speakers/leah-wald.png" class="w-100" alt="team-img">
             <div class="team-info">
               <h5> Leah Wald </h5>
@@ -221,7 +196,7 @@
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
         </div><!-- /.col-lg -->
-        
+
         <div class="col-10">
           <div class="team-single">
             <img src="assets/img/speakers/john.jpeg" class="w-100" alt="team-img">
@@ -229,6 +204,31 @@
               <h5> John D'Agostino </h5>
               <p>
                 Lead of Institutional Strategy, Coinbase
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/heath1.jpg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Heath Tarbet </h5>
+              <p>
+                CLO and Head of Corporate Affairs, Circle
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/jai1.jpg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Jai Massari </h5>
+              <p>
+                CLO, Lightspark<br>
+                Berkeley Law
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -272,11 +272,11 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/nic.png" class="w-100" alt="team-img">
+            <img src="assets/img/speakers/matt1.jpg" class="w-100" alt="team-img">
             <div class="team-info">
-              <h5> Nic Carter </h5>
+              <h5> Matt Williams </h5>
               <p>
-                General Partner, Castle Island Ventures
+                Head of Derivatives, Luxor Technology
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -484,18 +484,6 @@
               <h5> Jaime Leverton </h5>
               <p>
                 CEO, Jaime Leverton Ventures and Advisory Inc.
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
-
-        <div class="col-10">
-          <div class="team-single">
-            <img src="assets/img/speakers/matt1.jpg" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5> Matt Williams </h5>
-              <p>
-                Head of Derivatives, Luxor Technology
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
