--- a/speakers.html
+++ b/speakers.html
@@ -138,7 +138,7 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/peter2.jpeg" class="w-100" alt="team-img">
+            <img src="assets/img/speakers/nobel.jpg" class="w-100" alt="team-img">
             <div class="team-info">
               <h5> Peter Nobel </h5>
               <p>
