--- a/index.html
+++ b/index.html
@@ -205,11 +205,11 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/peter2.jpeg" class="w-100" alt="team-img">
+            <img src="assets/img/speakers/peter.jpg" class="w-100" alt="team-img">
             <div class="team-info">
               <h5> Peter Nobel </h5>
               <p>
-                The Nobel Family, <br>NobelDAO
+                Member of Nobel Family, <br>Nobel DAO Initiator
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -344,6 +344,54 @@
               <h5> Matt Williams </h5>
               <p>
                 Head of Derivatives, Luxor Technology
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/tadge.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Tadge Dryja </h5>
+              <p>
+                Researcher, Lightspark
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/steven.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Steven Roose </h5>
+              <p>
+                Developer, Ark
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/jameson1.png" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Jameson Lopp </h5>
+              <p>
+                Co-Founder & CSO, Casa
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/jhb.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> JHB </h5>
+              <p>
+                Protocol Engineer, Lightning Labs
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
