--- a/speakers.html
+++ b/speakers.html
@@ -135,14 +135,13 @@
 
       <div class="row g-lg-5 gy-4 justify-content-center row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1">
 
-
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/peter2.jpeg" class="w-100" alt="team-img">
+            <img src="assets/img/speakers/peter.jpg" class="w-100" alt="team-img">
             <div class="team-info">
               <h5> Peter Nobel </h5>
               <p>
-                The Nobel Family, <br>NobelDAO
+                Member of Nobel Family, <br>Nobel DAO Initiator
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -308,11 +307,23 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/jeremy+rubin.jpeg" class="w-100" alt="team-img">
+            <img src="assets/img/speakers/jameson1.png" class="w-100" alt="team-img">
             <div class="team-info">
-              <h5> Jeremy Rubin </h5>
+              <h5> Jameson Lopp </h5>
               <p>
-                Bitcoin Core Developer
+                Co-Founder & CSO, Casa
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/jhb.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> JHB </h5>
+              <p>
+                Protocol Engineer, Lightning Labs
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -320,17 +331,6 @@
 
         <!-- Other -->
 
-        <div class="col-10">
-          <div class="team-single">
-            <img src="assets/img/speakers/bob.jpeg" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5> Robert Bench </h5>
-              <p>
-                 Senior Advisor, MIT Digital Currency Initiative
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
 
         <div class="col-10">
           <div class="team-single">
@@ -339,18 +339,6 @@
               <h5> Ishaana Misra </h5>
               <p>
                 High School Student & Bitcoin Core Developer, Stuyvesant High School
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
-
-        <div class="col-10">
-          <div class="team-single">
-            <img src="assets/img/speakers/murch.png" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5> Murch </h5>
-              <p>
-                Engineer, Chaincode Labs
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -382,18 +370,6 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/anders.jpeg" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5> Anders Brownworth </h5>
-              <p>
-                Lecturer & Applied Researcher, MIT Digital Currency Initiative
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
-
-        <div class="col-10">
-          <div class="team-single">
             <img src="assets/img/speakers/madars.jpg" class="w-100" alt="team-img">
             <div class="team-info">
               <h5> Madars Virza </h5>
@@ -418,48 +394,11 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/sam-stuewe.jpeg" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5> Sam Stuewe </h5>
-              <p>
-                CBDC Software Engineer, MIT Digital Currency Initiative
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
-
-        <div class="col-10">
-          <div class="team-single">
             <img src="assets/img/speakers/valentine.jpeg" class="w-100" alt="team-img">
             <div class="team-info">
               <h5> Valentine Wallace </h5>
               <p>
                 Lightning Developer at Spiral
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
-
-        <div class="col-10">
-          <div class="team-single">
-            <img src="assets/img/speakers/josie.jpeg" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5> Josie Bake </h5>
-              <p>
-                Bitcoin Core Dev
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
-
-
-        <div class="col-10">
-          <div class="team-single">
-            <img src="assets/img/speakers/jameson1.png" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5> Jameson Lopp </h5>
-              <p>
-                Co-Founder & CSO, Casa
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -516,11 +455,11 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/jhb.jpeg" class="w-100" alt="team-img">
+            <img src="assets/img/speakers/bao1.jpg" class="w-100" alt="team-img">
             <div class="team-info">
-              <h5> JHB </h5>
+              <h5> Claire Bao </h5>
               <p>
-                Protocol Engineer, Lightning Labs
+                Research Assistant, MIT Digital Currency Initiative
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -528,11 +467,35 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/bao1.jpg" class="w-100" alt="team-img">
+            <img src="assets/img/speakers/austin.jpeg" class="w-100" alt="team-img">
             <div class="team-info">
-              <h5> Claire Bao </h5>
+              <h5> Austin Storms </h5>
               <p>
-                Research Assistant, MIT Digital Currency Initiative
+                Co-Head Mining, Galaxy
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/stacy.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Stacie Waleyko </h5>
+              <p>
+                Bitcoin Core Developer
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/gustavo.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Gustavo Flores Echaiz </h5>
+              <p>
+                Content Writer, Wasabi Wallet
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
@@ -565,13 +528,8 @@
 
       </div><!-- /.row -->
 
-
-
     </div><!-- /.container -->
   </section><!-- /.speakers -->
-  
-
-
 
   <footer class="footer-sec">
     <div class="container">
