--- a/schedule.html
+++ b/schedule.html
@@ -127,7 +127,7 @@
       </div><!-- /.page-title -->
 
       <div class="spr-btns mt-lg-5 mt-4">
-       <h5 class="cming">Coming Soon...</h5>
+        <a href="https://docs.google.com/spreadsheets/d/1ZkiNhnGR79RHgkD8eSukqYrSLcmsYhNeVblCtaurZFE/edit?usp=sharing"><h5 class="cming">Tenative Agenda</h5></a>
       </div><!-- /.spr-btns -->
 
     </div><!-- /.container -->
