--- a/index.html
+++ b/index.html
@@ -351,6 +351,18 @@
 
         <div class="col-10">
           <div class="team-single">
+            <img src="assets/img/speakers/emad.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Emad Mostaque </h5>
+              <p>
+                Founder, Stability AI
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
             <img src="assets/img/speakers/tadge.png" class="w-100" alt="team-img">
             <div class="team-info">
               <h5> Tadge Dryja </h5>
@@ -380,18 +392,6 @@
               <h5> Jameson Lopp </h5>
               <p>
                 Co-Founder & CSO, Casa
-              </p>
-            </div><!-- /.team-info -->
-          </div><!-- /.team-single -->
-        </div><!-- /.col-lg -->
-
-        <div class="col-10">
-          <div class="team-single">
-            <img src="assets/img/speakers/jhb.jpeg" class="w-100" alt="team-img">
-            <div class="team-info">
-              <h5> JHB </h5>
-              <p>
-                Protocol Engineer, Lightning Labs
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
