--- a/speakers.html
+++ b/speakers.html
@@ -283,6 +283,18 @@
 
         <div class="col-10">
           <div class="team-single">
+            <img src="assets/img/speakers/emad.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Emad Mostaque </h5>
+              <p>
+                Founder, Stability AI
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
             <img src="assets/img/speakers/tadge.png" class="w-100" alt="team-img">
             <div class="team-info">
               <h5> Tadge Dryja </h5>
@@ -317,6 +329,8 @@
           </div><!-- /.team-single -->
         </div><!-- /.col-lg -->
 
+        <!-- Other -->
+
         <div class="col-10">
           <div class="team-single">
             <img src="assets/img/speakers/jhb.jpeg" class="w-100" alt="team-img">
@@ -328,9 +342,6 @@
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
         </div><!-- /.col-lg -->
-
-        <!-- Other -->
-
 
         <div class="col-10">
           <div class="team-single">
