nobel dao fixes

--- a/nobeldao.html
+++ b/nobeldao.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <title> NobelDAO - About </title>
+  <title> Nobel DAO - About </title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Favicons -->
@@ -67,7 +67,7 @@
 
 
               <li class="nav-item">
-                <a href="nobeldao.html"> NobelDAO </a>
+                <a href="nobeldao.html"> Nobel DAO </a>
               </li>
 
 
@@ -123,7 +123,7 @@
   <section class="page-header">
     <div class="container">
       <div class="page-title">
-        <h1> NobelDAO </h1>
+        <h1> Nobel DAO </h1>
         <p>
           THE ANNUAL MIT BITCOIN EXPO <br>
           APRIL 20 - 21, 2024
@@ -141,7 +141,7 @@
 
      <div class="pt-lg-5 pt-md-3 pt-3 mb-3">
       <p>
-        NobelDAO Family 2024
+        Nobel DAO 2024
       </p>
      </div><!-- /.mt-lg-3 -->
 
