--- a/sponsors.html
+++ b/sponsors.html
@@ -67,7 +67,7 @@
 
 
               <li class="nav-item">
-                <a href="nobeldao.html"> NobelDAO </a>
+                <a href="nobeldao.html"> Nobel DAO </a>
               </li>
 
 
@@ -140,9 +140,9 @@
           <div class="team-single">
             <img src="assets/img/sponsors/nobel_logo.jpeg" class="w-100" alt="team-img">
             <div class="team-info">
-              <h5> NobelDAO </h5>
+              <h5> Nobel DAO </h5>
               <p>
-                DAO initiated by The Nobel Family
+                DAO initiated by Nobel Family Members
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
