--- a/speakers.html
+++ b/speakers.html
@@ -514,16 +514,39 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/speakers/spot1.jpeg" class="w-100" alt="team-img">
+            <img src="assets/img/speakers/arsh.jpg" class="w-100" alt="team-img">
             <div class="team-info">
-              <h5> Spot </h5>
+              <h5> Arsh Molu </h5>
               <p>
-                Boston Dynamics Robot
+                Financial Freedom Associate, Bitcoin Core Developer
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
         </div><!-- /.col-lg -->
 
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/simanta.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Simanta Gautam </h5>
+              <p>
+                Founder, Alpen Labs
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/speakers/armin.jpeg" class="w-100" alt="team-img">
+            <div class="team-info">
+              <h5> Armin Sabouri </h5>
+              <p>
+                Lead Software Engineer, Botanix
+              </p>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
 
         <div class="col-10">
           <div class="team-single">
