--- a/sponsors.html
+++ b/sponsors.html
@@ -170,7 +170,7 @@
 
         <div class="col-10">
           <div class="team-single">
-            <img src="assets/img/sponsors/sia_logo.svg" class="w-100" alt="team-img">
+            <img src="assets/img/sponsors/sia_logo.svg" class="w-50" alt="team-img">
             <div class="team-info">
               <h5> sia </h5>
               <p>
@@ -184,6 +184,64 @@
       </div>
 
     </div><!-- /.container -->
+  </section><!-- /.page-header -->
+
+  <section class="page-header">
+    <div class="container">
+      <div class="page-title">
+        <h2> Community Partners </h2>
+      </div><!-- /.page-title -->
+
+    </div><!-- /.container -->
+  </section><!-- /.page-header -->
+
+  <section class="sponsors">
+    <div class="container">
+     
+
+      <div class="row g-lg-5 gy-4 justify-content-center row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1">
+
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/sponsors/Aspecta.png" class="w-50" alt="team-img">
+            <div class="team-info">
+              <h5> Aspecta </h5>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/sponsors/zerohash.jpg" class="w-50" alt="team-img">
+            <div class="team-info">
+              <h5> Zerohash </h5>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/sponsors/OnePiece Labs.png" class="w-50" alt="team-img">
+            <div class="team-info">
+              <h5> OnePiece Labs </h5>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+
+        <div class="col-10">
+          <div class="team-single">
+            <img src="assets/img/sponsors/Digital Currency Initiative.png" class="w-50" alt="team-img">
+            <div class="team-info">
+              <h5> MIT Digital Currency Initiative </h5>
+            </div><!-- /.team-info -->
+          </div><!-- /.team-single -->
+        </div><!-- /.col-lg -->
+      </div>
+
+    </div><!-- /.container -->
+  </section><!-- /.page-header -->
+
   </section><!-- /.page-header -->
  
   <footer class="footer-sec">
