--- a/team.html
+++ b/team.html
@@ -186,7 +186,7 @@
           <div class="team-single">
             <img src="assets/img/team/yevheniia.png" class="w-100" alt="team-img">
             <div class="team-info">
-              <h5> Yevheniia Polishchuck </h5>
+              <h5> Yevheniia Polishchuk </h5>
               <p>
                 Content
               </p>
