--- a/speakers.html
+++ b/speakers.html
@@ -518,7 +518,7 @@
             <div class="team-info">
               <h5> Arsh Molu </h5>
               <p>
-                Financial Freedom Associate, Bitcoin Core Developer
+                Financial Freedom Associate, Human Rights Foundation
               </p>
             </div><!-- /.team-info -->
           </div><!-- /.team-single -->
